Fixed the kantine having wrong padding

--- a/Assets/css/_Kantine.scss
+++ b/Assets/css/_Kantine.scss
@@ -10,7 +10,7 @@
     align-items: center;
     gap: 10px;
     margin: 8px 0 2px;
-    padding: 10px 0 0px;
+    padding: 10px 0 8px;
     border-bottom: 2px solid $white;
   }
 
